<resources>

    <!-- Application Name -->
    <string name="app_name">SimpleBookMovie</string>

    <!-- Common Strings -->
    <string name="default_image_description">Image</string>
    <string name="common_get_data">getting data, please wait ~</string>
    <string name="common_upload_data">uploading data, please wait ~</string>

    <!-- Main Activity -->
    <string name="main_tab_book">Book</string>
    <string name="main_tab_movie">Movie</string>
    <string name="main_tab_user">Mine</string>
    <string name="main_menu_search">Search</string>
    <string name="main_menu_settings">Settings</string>
    <string name="main_menu_about">About</string>

    <!-- Login -->
    <string name="login">Login</string>
    <string name="login_first">Please login first</string>

    <!-- Detail -->
    <string name="detail_menu_web">Open in web mode</string>
    <string name="detail_menu_explorer">Open in explorer</string>
    <string name="book_detail_title">Book Detail</string>
    <string name="movie_detail_title">Movie Detail</string>

    <!-- Search -->
    <string name="search_type_book">Book</string>
    <string name="search_type_movie">Movie</string>
    <string name="search_hint">Search</string>
    <string name="search_input_empty">Input Empty</string>

    <!-- User Fragment -->
    <string name="user_name">Nickname</string>
    <string name="user_head">Avatar</string>
    <string name="user_location">Location</string>
    <string name="user_signature">Signature</string>
    <string name="user_description">Description</string>
    <string name="user_location_hint">User Location</string>
    <string name="user_signature_hint">User Signature</string>
    <string name="user_description_hint">User Description</string>

    <!-- Setting Activity -->
    <string name="settings_title">Settings</string>
    <string name="settings_logout">Logout</string>
    <string name="settings_version">Version</string>
    <string name="settings_about_content">该项目是个人练习所做，利用豆瓣的 API 简单实现书籍影视的查询。同时由于豆瓣 API 的限制，实现的的特性较少，也引起了体验上的缺陷。\n\n开源地址：https://github.com/DongYuHui/simple-book-movie</string>

    <!-- 一条莫名所以的分割线 -->

    <!-- Login -->
    <string name="login_button_action">Login</string>
    <string name="login_hint_account">Account</string>
    <string name="login_hint_password">Password</string>

    <!-- About -->
    <string name="about_title">About</string>
    <string name="about_version">Version: %s</string>
    <string name="about_version_error">Unknown Version</string>
    <string name="about_author_title">Author Summary</string>
    <string name="about_author_content">Blog : www.kyletung.com\nEmail : dyh920827@gmail.com\nGitHub : github.com/DongYuHui/simple-book-movie</string>

</resources>
