<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/default_image_description"
        android:scaleType="centerCrop"
        android:src="@drawable/login_background_06"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/base_dimen_56dp"
        android:layout_marginLeft="@dimen/base_dimen_40dp"
        android:layout_marginRight="@dimen/base_dimen_40dp"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_view_height"
            android:background="@drawable/login_edit_background"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="@dimen/login_icon_height"
                android:layout_height="@dimen/login_icon_height"
                android:layout_margin="@dimen/base_dimen_8dp"
                android:contentDescription="@string/default_image_description"
                android:scaleType="centerInside"
                android:src="@drawable/icon_login_account"/>

            <View
                android:layout_width="@dimen/base_dimen_1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/base_dimen_8dp"
                android:layout_marginTop="@dimen/base_dimen_8dp"
                android:background="@color/login_view_color"/>

            <EditText
                android:id="@+id/login_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/base_dimen_8dp"
                android:layout_marginRight="@dimen/base_dimen_8dp"
                android:background="@null"
                android:hint="@string/login_hint_account"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/login_view_color"
                android:textColorHint="@color/login_hint_color"
                android:textSize="@dimen/login_text_size"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_view_height"
            android:layout_marginTop="@dimen/base_dimen_16dp"
            android:background="@drawable/login_edit_background"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="@dimen/login_icon_height"
                android:layout_height="@dimen/login_icon_height"
                android:layout_margin="@dimen/base_dimen_8dp"
                android:contentDescription="@string/default_image_description"
                android:scaleType="centerInside"
                android:src="@drawable/icon_login_password"/>

            <View
                android:layout_width="@dimen/base_dimen_1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/base_dimen_8dp"
                android:layout_marginTop="@dimen/base_dimen_8dp"
                android:background="@color/login_view_color"/>

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/base_dimen_8dp"
                android:layout_marginRight="@dimen/base_dimen_8dp"
                android:background="@null"
                android:hint="@string/login_hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/login_view_color"
                android:textColorHint="@color/login_hint_color"
                android:textSize="@dimen/login_text_size"/>

        </LinearLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_view_height"
            android:layout_marginTop="@dimen/base_dimen_16dp"
            android:background="@drawable/login_button_background"
            android:enabled="false"
            android:text="@string/login_button_action"
            android:textColor="@color/login_view_color"
            android:textSize="@dimen/login_text_size"/>

    </LinearLayout>

</RelativeLayout>